# ROOT-Optimization

./: .gitignore  README.md
2_NTuple/: 2_nuples.cc  2_nuples.h
NTupleWrite/: ntuple_write.py
NTupleWrite/maker/: NTupleWrite
NTupleWrite/src/: NTupleWrite.cc
RDataFrameWrite/: setup.sh
RDataFrameWrite/maker/: RDataFrameWrite  rdataframewrite_compression_test_results.csv  test_compression.sh
RDataFrameWrite/src/: RDataFrameWrite.cc
StructRDataFrameWrite/: setup.sh
StructRDataFrameWrite/maker/: StructRDataFrameWrite  struct_rdataframe_compression_test_results.csv  test_compression.sh
StructRDataFrameWrite/src/: LinkDef.h  Read.py  StructRDataFrameWrite.cc  TreeData.cc  TreeData.h
StructWrite/maker/: MT_struct_compression_test_results.csv  StructWrite  struct_compression_test_results.csv  test_write_read.sh
StructWrite/src/: CMakeLists.txt  StructWrite.cc  StructWrite.h  TreeData.cc  TreeData.h
StructWriteEmbed/: setup.sh
StructWriteEmbed/maker/: 4algos_struct_compression_test_results.csv  StructWrite  struct_compression_test_results.csv
StructWriteEmbed/src/: Clone.py  LinkDef.h  ReadWrite.py  StructWrite.cc  StructWrite.h  TreeData.cc  TreeData.h
StructWriteMatrix/maker/: StructWrite  struct_compression_test_results.csv  test_compression.sh  test_write_read.sh  time_reading_script.py
StructWriteMatrix/src/: ReadWriteDeclare.py  StructWrite.cc  StructWrite.h  TreeData.h
StructWriteMatrixEmbed/maker/: StructWrite
StructWriteMatrixEmbed/src/: StructWrite.cc  StructWrite.h  TreeData.cc
StructWriteSparseMatrix/maker/: StructWrite  struct_compression_test_results.csv
StructWriteSparseMatrix/src/: LinkDef.h  StructWrite.cc  StructWrite.h  TreeData.cc  TreeData.h
VectorWrite/maker/: VectorWrite  struct_compression_test_results.csv  test_compression.sh  time_reading_script.py  vector_compression_test_results.csv
VectorWrite/src/: CMakeLists.txt  VectorWrite.cc  VectorWrite.h
VectorWriteMatrix/: setup.sh
VectorWriteMatrix/maker/: 10%_vector_compression_test_results.csv  15%_vector_compression_test_results.csv  20%_vector_compression_test_results.csv  5%_vector_compression_test_results.csv  VectorWrite  test_write_read.sh  time_reading_script.py  vector_compression_test_results.csv
VectorWriteMatrix/src/: VectorWrite.cc  VectorWrite.h
VectorWriteSparseMatrix/maker/: 10%_vector_compression_test_results.csv  15%_vector_compression_test_results.csv  20%_vector_compression_test_results.csv  5%_vector_compression_test_results.csv  VectorWrite  (+4 more)
(+2 files in other folders)
